--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body{
 background-color: black;
+overflow-x: hidden;
 }
 h1{
     color:white;
     font-size:70px;
+    margin-bottom:30px;
+    font-family:sans-serif;
 }
 canvas{
 width:600px;
@@ -20,18 +23,30 @@ audio{
 }
 select{
     margin-bottom:5px;
-    height:50px;
-    font-size: 30px;
+    height:30px;
+    font-size: 15px;
     width:300px;
     text-align:center;
-    border-radius:10px;
+    border-radius:5px;
 }
-input{
+.fileButton{
     margin-bottom:5px;
     font-size: 20px;
-    width:120px;
+    width:300px;
     align-items:center;
-    border-radius:10px;
+    border-radius:20px;
+}
+.color{
+    margin-top:5px;
+    font-size: 20px;
+    height:50px;
+    width:300px;
+    align-items:center;
+    border-radius:50px;
+}
+
+input{
+    display:none;
 }
 .flex{
     display:flex;
@@ -40,4 +55,10 @@ input{
     align-items:center;
     justify-content: center;
     flex-flow:column;
+}
+button:hover{
+    background-color:rgb(191, 187, 187);
+}
+select:hover{
+    background-color:rgb(191, 187, 187);
 }
