--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ select{
     margin-bottom:5px;
     font-size: 20px;
     width:300px;
+    height:50px;
     align-items:center;
     border-radius:20px;
     border:none;
