--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ audio{
 select{
     margin-bottom:5px;
     height:30px;
-    font-size: 15px;
+    font-size: 30px;
     width:300px;
     text-align:center;
     border-radius:5px;
@@ -62,9 +62,9 @@ input{
 button:hover{
     background-color:rgb(191, 187, 187);
 }
+button{
+    background-color:rgb(255, 255, 255);
+}
 button:active{
     background-color:rgb(168, 161, 161);
-}
-select:hover{
-    background-color:rgb(191, 187, 187);
 }
